[package]
name = "quath"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
fips204 = "0.4.6"

sha3 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4"] }
rand = "0.9.0"
trait-variant = "0.1.2"
async-trait = "0.1.88"


[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.2"
smol = "2.0.2"
