[package]
name = "quath"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
fips204 = "0.4.6"

sha3 = "0.10.8"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.0"
trait-variant = "0.1.2"
async-trait = "0.1.88"
hyper = { version = "1.6.0", features = ["full"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.10", features = ["full"] }
http-body-util = "0.1.3"
base64 = "0.22.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
http = "1.3.1"
once_cell = "1.21.1"
regex = "1.11.1"



[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.2"
smol = "2.0.2"
tokio = { version = "1.44.1", features = ["full"] }
