[package]
name = "quath"
version = "0.1.0"
edition = "2024"

[features]
default = ["sha3", "fips203", "fips204", "fips205", "sha2", "chrono", "serde" ]  # Optional, specify default features if needed

serde = [ "base64", "dep:serde", "chrono" ]

[dependencies]
chrono = { version = "0.4.40", features = ["arbitrary", "serde"], optional=true }
fips204 = { version = "0.4.6", optional=true }

sha3 = { version = "0.10.8", optional=true }


uuid = { version = "1.16.0", features = ["serde", "v4"] }
rand = "0.9.0"

thiserror = "2.0.12"

ml-kem = "0.2.1"
rand_core = "0.9.0"
fips203 = { version = "0.4.3", optional = true }
k256 = { version = "0.13.4", features = ["ecdh", "ecdsa", "ecdsa-core"] }
fips205 = { version = "0.4.1", optional = true }
sha2 = { version = "0.10.9", optional = true }

zeroize = "1.8.1"
paste = "1.0.15"
bitvec = "1.0.1"
serde = { version = "1.0.219", optional = true }
base64 = {  version = "0.22.1", optional = true }
serde_json = "1.0.140"





[dev-dependencies]
arbitrary = { version = "1", features = ["derive"] }
arbtest = "0.3.2"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_test = "1.0.177"
